workloads/bookinfo/envoyfilter/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoy-stats
  namespace: istio-system
spec:
  configPatches:
    - applyTo: LISTENER
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 15091
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: stats
                    route_config:
                      virtual_hosts:
                        - name: backend-envoy
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/stats"
                              route:
                                cluster: "prometheus_stats"
                            - match:
                                prefix: "/server_info"
                              route:
                                cluster: "prometheus_stats"
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - applyTo: LISTENER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 15091
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: stats
                    route_config:
                      virtual_hosts:
                        - name: backend-envoy
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/stats"
                              route:
                                cluster: "prometheus_stats"
                            - match:
                                prefix: "/server_info"
                              route:
                                cluster: "prometheus_stats"
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
